--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="text" placeholder="type the word here" id="inp-word"> 
             <button id="search-button">search</button>
         </div>
-        <div class="result">
+        <div class="result" id="result">
             <div class="word">
                 <h3>Sample</h3>
                 <button>
